# GLFW-in-CMake

./: CMakeLists.txt  README.md  commands.txt
src/: main.cpp
